--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,13 @@
-.Menu-Cabecera{background-color: #98fb98; width: 100%;}
+.Menu-Cabecera{background-color: #a4cdd7; width: 100%;}
 *{margin: 0; padding: 0;}
-.Banner{background-color: rgb(11, 148, 148); width: 100%; height: 120px;}
 .CajaColumnas{display: flex; justify-content: space-around; align-items: center; gap: 10px;}
 .Columna{flex: 1; background-color: rgb(121, 182, 134); border: 1px solid black; text-align: center;}
 .ColorAzulClaro{background-color: rgb(129, 162, 182);}
 .ColorMorado{background-color: rgba(183, 154, 209, 0.726);}
 .Banner2{background-color: khaki; width: 100%; height: 120px;}
+.MenuSuperior li{display: inline; padding: 3px; border-right: solid 1px black;}
+.MenuSuperior{text-transform: uppercase; font-weight: bold; text-align: right; padding: 20px;}
+.MenuSuperior li a:hover{color: #72a9b5; text-decoration: underline;}
+li a{text-decoration: none;}
+.MenuSuperior li:last-child{border-right: none;}
+.Banner{background-image:url("../imagenes/612_6214d15f6ab89.png"); width: 100%; height: 350px; background-repeat: no-repeat; background-size: cover; background-position-y: 30%;}
